simplechat.less
body {
  background-color: #eee;
  font-family: 'Open Sans', sans-serif;
}

.clearfix {
  clear: both;
}

#main {
  margin-top: 25px;

  #register_window {
    width: 780px;
    margin: 6px auto;
    border: 3px solid #ddd;
    -moz-border-radius: 5px; 
    -webkit-border-radius: 5px;
    border-radius: 5px;
    background: white;
    padding: 10px 20px 20px;
    color: #222;

    #warning {
      color: red;
      margin: 10px 0;
    }

    #register {
      border: 2px solid #ddd;
      -moz-border-radius: 5px; 
      -webkit-border-radius: 5px;
      border-radius: 5px;
      width: 150px;
      padding: 5px;
      font-size: 18px;
      margin-left: 10px;
    }  
  }

  #chat_window {
    width: 825px;
    margin: 6px auto;

    #chat {
      background-color: white;
      border: 3px solid #ddd;
      -moz-border-radius: 5px; 
      -webkit-border-radius: 5px;
      border-radius: 5px;
      width: 638px;
      height: 400px;
      padding: 10px 15px 5px 5px;
      overflow: auto;
      color: #222;
      font-size: 14px;

      div {
        display: block;
        padding-bottom: 3px;

        span {
          &.sidebar {
            display: inline-block;
            padding-top: 1px;
            font-size: 12px;
            color: #aaa;
            text-align: left;
            margin-right: 10px;
            float: left;
            vertical-align: top;
          }

          &.msg {
            width: 77%;
            float: left;
          }

          &.time {
            text-align: left;
            margin-right: 5px;
          }

          &.user {
            color: #800000;
            text-align: right;
          }
        }
      }
    }

    #users {
      background-color: white;
      border: 3px solid #ddd;
      -moz-border-radius: 5px; 
      -webkit-border-radius: 5px;
      border-radius: 5px;
      width: 130px;
      height: 405px;
      padding: 5px 10px 5px;
      float: right;
      line-height: 20px;
      color: #800000;
      font-size: 14px;
      overflow: auto;
    }
  }

  h1#title {
    display: block;
    margin: auto;
    width: 820px;
    color: #555;
    font-size: 36px;
  }

  #input {
    display: block;
    margin: auto;
    border: 3px solid #ddd;
    -moz-border-radius: 5px; 
    -webkit-border-radius: 5px;
    border-radius: 5px;
    width: 810px;
    padding: 5px;
    font-size: 18px;
  }  
}

input:focus, select:focus, textarea:focus {
  outline: none;
}

